--- a/.gitmodules
+++ b/.gitmodules
@@ -367,6 +367,10 @@
 [submodule "tigris"]
 	path = tigris
 	url = https://github.com/walkerke/tigris
+[submodule "tinytable"]
+	path = tinytable
+	url = https://github.com/vincentarelbundock/tinytable
+	registered = false
 [submodule "tinytex"]
 	path = tinytex
 	url = https://github.com/rstudio/tinytex
