--- a/.gitmodules
+++ b/.gitmodules
@@ -41,6 +41,10 @@
 [submodule "areal"]
 	path = areal
 	url = https://github.com/chris-prener/areal
+[submodule "bayestestR"]
+	path = bayestestR
+	url = https://github.com/easystats/bayestestR
+	registered = false
 [submodule "bbplot"]
 	path = bbplot
 	url = https://github.com/bbc/bbplot
