--- a/.gitmodules
+++ b/.gitmodules
@@ -148,6 +148,10 @@
 [submodule "httr2"]
 	path = httr2
 	url = https://github.com/r-lib/httr2
+[submodule "insight"]
+	path = insight
+	url = https://github.com/easystats/insight
+	registered = false
 [submodule "ipumsr"]
 	path = ipumsr
 	url = https://github.com/ipums/ipumsr
@@ -176,6 +180,10 @@
 [submodule "mapview"]
 	path = mapview
 	url = https://github.com/r-spatial/mapview
+[submodule "modelbased"]
+	path = modelbased
+	url = https://github.com/easystats/modelbased
+	registered = false
 [submodule "mschart"]
 	path = mschart
 	url = https://github.com/ardata-fr/mschart
